@@ -21,14 +21,6 @@ struct buffer
     /* Nonzero if the buffer is in nonblocking mode.  */
     bool nonblocking;
 
-    /* The start index of the last data returned to a caller, relative to when
-     * this buffer was instantiated.
-     */
-    size_t last_index;
-
-    /* The number of bytes last returned to a caller.  */
-    size_t last_count;
-
     /* Functions must be provided to transfer data in and out of the
        buffer.  Either the input or output field must be set, but not
        both.  */
@@ -112,8 +104,7 @@ struct buffer_data
 /* The type of a function passed as a memory error handler.  */
 typedef void (*BUFMEMERRPROC) (struct buffer *);
 
-struct buffer *buf_initialize (size_t, size_t,
-                               int (*) (void *, char *, size_t, size_t,
+struct buffer *buf_initialize (int (*) (void *, char *, size_t, size_t,
 					size_t *),
 			       int (*) (void *, const char *, size_t, size_t *),
 			       int (*) (void *),
